Fix typos in non-Markdown files
Clean up misspellings via codespell.